# curriculo

./: CLAUDE.md  CMakeLists.txt  Kconfig  README.md  pyproject.toml  ruff.toml
apps/quire/: README.md
cmake/modules/: FindCMock.cmake  FindLibevdev.cmake  kconfig.cmake  unity.cmake  unity_cfg.yaml
configs/: README.md  linux.conf  pinenote.conf  testing.conf
docs/: llm-project.md
include/curriculo/platform/: common.h  input.h
include/curriculo/platform/common/: list.h  macros.h
include/curriculo/platform/testing/: diode.h
include/curriculo/platform/testing/diode/: poll.h  private.h
include/qwiet/platform/: common.h  input.h  net.h  sem.h  time.h  timer.h
include/qwiet/platform/common/: list.h  macros.h
include/qwiet/platform/linux/: event.h  input_evdev.h  timer.h
include/qwiet/platform/linux/input/: evdev.h
include/qwiet/platform/posix/: net.h  sem.h
include/qwiet/platform/testing/: diode.h
include/qwiet/platform/testing/diode/: input_evdev.h  net_connect.h  net_listen.h  net_poll.h  net_recv.h  net_send.h  poll.h
include/qwiet/platform/testing/diode/input/: evdev.h
platform/: CMakeLists.txt  Kconfig
platform/linux/: CMakeLists.txt  Kconfig
platform/linux/src/: event.c  input_evdev.c  net.c  sem.c  time.c  timer.c
platform/posix/: CMakeLists.txt  Kconfig
platform/posix/src/: net.c  sem.c  time.c
platform/testing/diode/: CMakeLists.txt  README.md
platform/testing/diode/mocks/: libevdev.h
platform/testing/diode/src/: diode.c  input_evdev.c  poll.c
platform/testing/diode/src/input/: evdev.c
tests/diode/: CMakeLists.txt  Kconfig
tests/diode/src/: test.c  test_connect.c  test_evdev.c  test_listen.c  test_poll.c  test_recv.c  test_send.c
tests/list/: CMakeLists.txt
tests/list/src/: test.c
tests/macros/: CMakeLists.txt
tests/macros/src/: test.c
tests/sem/: CMakeLists.txt
tests/sem/src/: test.c
tests/timer/src/: test.c
tools/kconfig/: genconfig.py
